--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,8 @@
   font-weight: normal;
   width: 100%;
   height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a,
